# open-hostfactory-plugin

./: .bandit.yaml  .coveragerc  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  backup.sh  bandit-report.json  bandit-report.sarif  fix_sim_issues.py  hadolint-results.sarif  hfmock.py  input-output.md  local_env.sh  mypy.ini  pyproject.toml  pyproject.toml.template  pytest.ini  python-sbom-cyclonedx.json  requirements-dev.txt  requirements-test.txt  requirements.txt  security-report.json  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  container-security.yml  dependabot-automerge.yml  dependabot-uv-lock.yml  dependency-maintenance.yml  docs.yml  publish.yml  sbom.yml  security.yml  test-matrix.yml
awscpinst/config/: awsprov_config.json  awsprov_templates.json
awscpinst/input/: ASG.json  EC2Fleet.json  RunInstances.json  SpotFleet.json
awscpinst/workdir/: awscpinst_database.json
config/: README.md  config.example.json  default_config.json
dev-tools/docker/: build.sh
dev-tools/package/: build.sh  install-dev.sh  publish.sh  test-install.sh  version-bump.sh
dev-tools/scripts/: check_requirements.sh  ci_check.py  ci_docs_build.sh  ci_docs_build_for_pages.sh  container-build-multi.sh  container-build.sh  install-completions.sh  quality_check.py  quick-start.sh
dev-tools/security/: security_scan.py  validate_sarif.py
dev-tools/testing/: run_tests.py
docs/: field_mapping_architecture.md  mkdocs.yml
docs/api/: multi-provider-api.md
docs/architecture/: machine-discovery-flow.md  multi-provider-design.md
docs/cli/: template-commands.md
docs/docs/: api-reference.md  architectural_assessment.md  configuration-guide.md  import_guidelines.md  index.md  provider_strategy_guide.md  provider_strategy_pattern_guide.md  requirements.txt  storage_registry_pattern.md  unified_format_system.md  versioning_guide.md
docs/mcp/: integration-guide.md  tools-mode.md
docs/sdk/: quickstart.md
hf_docs/: awsprov_config.md  awsprov_templates.md  input-output.md
scripts/: analyze_dead_code.py  analyze_dependencies.py  getAvailableTemplates.bat  getAvailableTemplates.sh  getRequestStatus.bat  getRequestStatus.sh  getReturnRequests.bat  getReturnRequests.sh  invoke_provider.sh  requestMachines.bat  requestMachines.sh  requestReturnMachines.bat  requestReturnMachines.sh  test-docker.sh  validate_cqrs.py  validate_imports.py
src/: README.md  __init__.py  _package.py  _version.py  app.py  bootstrap.py  run.py
src/api/: README.md  __init__.py  dependencies.py  get_available_templates.py  get_request_status.py  get_return_requests.py  request_machines.py  request_return_machines.py  server.py  validation.py
src/application/: README.md  __init__.py  decorators.py  service.py
src/aws/: asg_handler.py  aws_handler.py  base_aws_handler.py  ec2_fleet_handler.py  odcr_handler.py  run_instances_handler.py  spot_fleet_handler.py
src/cli/: completion.py  field_mapping.py  formatters.py  main.py
src/config/: README.md  __init__.py  defaults.py  loader.py  manager.py  migration.py
src/domain/: README.md  (+1 more)
tests/: __init__.py  conftest.py  conftest_simple.py  test_basic_functionality.py  test_end_to_end.py  test_field_mapping_integration.py  test_import_validation.py  test_injectable_migration.py  test_logging_fixes.py  test_logging_integration.py  test_provider_strategy_examples.py  test_setup.py
(+697 files in other folders)
