[tool.poetry]
name = "awsome-hf-plugin"
version = "0.1.0"
description = "AWS Host Factory Plugin for IBM Spectrum Symphony"
authors = ["Flamur Gogolli <flamurg@amazon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.36.2"
botocore = "^1.36.3"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.38"
dynaconf = "^3.2.4"
structlog = "^25.1.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-instrumentation-boto = "^0.51b0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.3.1"
moto = "^4.2.7"
coverage = "^7.3.2"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing"
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "moto.*",
    "boto3.*",
    "botocore.*",
    "dynaconf.*",
    "structlog.*",
    "opentelemetry.*"
]
ignore_missing_imports = true